# base-utils

./: .gitignore  Dockerfile  README.md  aije_deploy.py  build_pyarmor.py  deploy.sh  docker.md  docker.sh  ffmpeg.sh  font_demo.py  gpu-guides.md  hfd.sh  inscode.sh  requirements.txt  setup.py  setup.sh
base_utils/: CMakeLists.txt
base_utils/include/: android_utils.h  base.h  debug.h  face_alignment.h  file_utils.h  image_utils.h  math_utils.h  transform.h
base_utils/src/: debug.cpp  face_alignment.cpp  file_utils.cpp  image_utils.cpp  math_utils.cpp  transform.cpp
cmakelists/: qt.txt  qt_opencv_opengl.txt
data/: merge_person.json  person.json  person2.json  write_contents.txt
data/VOC2007/: voc_coco_demo.json
data/audio/: bus.pcm  test1.pcm
data/coco/: coco_ins.json  coco_kps.json  file_list.txt  person.json
data/labelme/: mask.json
data/person/: test2.json
docs/: README.md  csdn1.html  csdn2.html  git-guide.md  requirements-py38.txt  requirements.txt  requirements_py36.txt  requirements_py38.txt  requirements_py39.txt
docs/关键点示意图/: COCO人体关键点17-示意图颜色.ppt  README.md
pybaseutils/: __init__.py  base64_utils.py  batch_utils.py  classification_report.py  color_utils.py  config_utils.py  coords_utils.py  debug.py  file_utils.py  font_utils.py  geometry_tools.py  heatmap_utils.py  http_utils.py  image_font.py  image_utils.py  json_utils.py  log.py  log_utils.py  logger.py  mouse_utils.py  numpy_tools.py  numpy_utils.py  pandas_utils.py  plot_utils.py  setup_config.py  singleton_utils.py  text_utils.py  thread_utils.py  time_tools.py  time_utils.py  tracemalloc_utils.py  tracemalloc_utils2.py  video_tools.py  video_utils.py  word_utils.py  worker.py  yaml_utils.py
pybaseutils/audio/: __init__.py  audio_utils.py  install.sh  pyaudio_utils.py  vad_utils.py
pybaseutils/base_audio/: __init__.py  audio_utils.py  install.sh  pyaudio_utils.py  vad_utils.py
pybaseutils/build_utils/: __init__.py  cython_utils.py  pyarmor_utils.py
pybaseutils/cluster/: kmean.py  maxmin_distance.py  similarity.py
pybaseutils/converter/: __init__.py  build_coco.py  build_cvat.py  build_labelme.py  build_voc.py  concat_coco.py  convert_coco2labelme.py  convert_coco2voc.py  convert_cvat2labelme.py  convert_labelme2coco.py  convert_labelme2cvat.py  convert_labelme2voc.py  convert_labelme2yolo.py  convert_voc2coco.py  convert_voc2labelme.py  convert_voc2voc.py  convert_voc2yolo.py  convert_yolo2voc.py
pybaseutils/cvutils/: __init__.py  conner_utils.py  corner_utils.py  monitor.py  mouse_utils.py  nms_utils.py  video_utils.py
pybaseutils/dataloader/: __init__.py  balanced_classes.py  base_coco.py  base_dataset.py  custom_coco.py  data_resample.py  dataset.py  parser_coco_det.py  parser_coco_ins.py  parser_coco_kps.py  parser_image_folder.py  parser_image_text.py  parser_labelme.py  parser_textdata.py  parser_voc.py  parser_yolo.py  voc_seg_utils.py
pybaseutils/filter/: QueueTable.py  __init__.py  demo.py  kalman_filter.py  mean_filter.py  motion_filter.py  pose_filter.py
pybaseutils/font_style/: __init__.py
pybaseutils/maker/: __init__.py  convert_labelme2voc.py  convert_text2voc.py  convert_voc2coco.py  convert_voc2text.py  convert_voc2voc.py  convert_voc2yolo.py  convert_yolo2voc.py  maker_labelme.py  maker_voc.py
pybaseutils/metrics/: __init__.py  accuracy.py  average_meter.py  class_report.py  confuse.csv  plot_pr.py  plot_roc.py
pybaseutils/pose/: __init__.py  bones_utils.py  human_pose.py  pose_utils.py
pybaseutils/pycpp/: CMakeLists.txt  README.md  build.sh  demo.py  main.cpp  main.py
pybaseutils/pycpp/src/: ctypes_utils.cpp  test.cpp  test.h
pybaseutils/server/: __init__.py  apm_server.py
pybaseutils/smooth/: decay_filter.py  demo.py  mean_filter.py  pose_filter.py
pybaseutils/tracking/: QueueTable.py  __init__.py  demo.py  kalman_filter.py  mean_filter.py  motion_filter.py  pose_filter.py
pybaseutils/transforms/: __init__.py  affine_transform.py  augment_utils.py  face_alignment.py  transform_utils.py
pybaseutils/web/: README.md  __init__.py  app_stweb_image.py  app_webio_image.py  demo.py  run.sh  st_image_web.py
pytest/: __init__.py  csdn1.html  demo.py
test/: .~confusion_matrix.csv  CMakeLists.txt  Types.h  build.sh  confusion_matrix.csv  csdn0.html  csdn1.html  demo.py  filter_test.cpp  get_file_list.py  kalman_test.cpp  main.cpp  metrics_demo.py  opencl_test.cpp  openmp_test.cpp  pose_filter.cpp  pose_filter.h  pybaseutils-example.py  taichi_demo.py  worker-example.py
test/contrib/base_cl/: CMakeLists.txt  README.md
test/contrib/base_cl/include/: Convolution.h  HelloWorld_str.h  cl_info.h
test/contrib/base_cl/kernel/: HelloWorld_Kernel.cl
test/contrib/base_cl/src/: cl_info.cpp
test/filter/: pose_filter1.cpp
test/opencv/: README.md  opencv_nms.cpp  stereo_match_bm.cpp  stereo_match_sgbm.cpp
test/qt/: CMakeLists.txt
test/qt/assets/ui/: mainwindow.ui
test/qt/src/: mainwindow.cpp  mainwindow.h
test_cpp/: filter_test.cpp  main.cpp  opencl_test.cpp  openmp_test.cpp
test_cpp/contrib/base_cl/: CMakeLists.txt
test_cpp/contrib/base_cl/include/: Convolution.h  HelloWorld.h  HelloWorld_str.h  cl_info.h
test_cpp/contrib/base_cl/kernel/: Convolution.cl
test_cpp/contrib/base_cl/src/: cl_info.cpp
test_cpp/filter/: Types1.h  pose_filter1.cpp  pose_filter1.h
test_cpp/opencv/: stereo_match_bm.cpp  stereo_match_sgbm.cpp
test_py/: __init__.py  apm_demo.py  class_attribute.py  class_names.py  csdn1.html  date_dataset.py  date_demo.py  datedataset_bk.py  demo.ipynb  demo.py  demo1.py  demo2.py  demo3.py  demo_async_await1.py  demo_async_await2.py  demo_coco_vis.py  demo_copy_files.py  demo_copy_files_for_voc.py  demo_correction_v1.py  demo_correction_v2.py  demo_correction_v3.py  demo_document_correct.py  demo_ffmpy.py  demo_for_labelme.py  demo_for_pair_file.py  demo_for_polygon.py  demo_for_trt.py  demo_get_file_label.py  demo_get_file_list.py  demo_gif.py  demo_gif_video.py  demo_image_crop.py  demo_kpts.py  demo_labelme.py  demo_labelme_crop.py  demo_lableme_vis.py  demo_metrics.py  demo_mouse.py  demo_nii.py  demo_pandas.py  (+24 more)
(+217 files in other folders)
